# semantic-vector-router

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  benchmark_data_seeding_spec.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md
docs/architecture/: ARCHITECTURE.md  LIFECYCLE_ARCHITECTURE.md
docs/executive/: EXECUTIVE_CTO_SUMMARY.md
docs/roadmap/: FUTURE_PHASES.md  MULTI_BACKEND_ROADMAP.md  ROADMAP.md
examples/: centroid_routing.py  custom_metrics.py  fastapi_integration.py  fields_mode.py  ingest_documents.py  multi_partition_search.py  quickstart.py  quickstart_config_file.py  quickstart_sync.py  scheduler_webhooks.py  voyage4_asymmetric.py
semantic_vector_router/: __init__.py  client.py  config.py  config_validators.py  exceptions.py  factories.py  ingestion.py  presets.py
semantic_vector_router/backends/: __init__.py  base.py  factory.py  metadata.py  mongodb_indexes.py  mongodb_views.py
semantic_vector_router/cli/: __init__.py  analyze.py  cache.py  config_cmd.py  helpers.py  index.py  ingest.py  init.py  monitor.py  partitions.py  repartition.py  schedule.py  search.py  split.py  try_search.py  watch.py  webhooks.py
semantic_vector_router/embedders/: __init__.py  base.py  cohere.py  huggingface.py  openai.py  voyage.py
semantic_vector_router/events/: __init__.py  bus.py  models.py  webhook.py
semantic_vector_router/lifecycle/: __init__.py  detector.py  index_manager.py  monitor.py  provisioner.py  repartition.py  scanner.py  splitter.py  view_manager.py  watcher.py
semantic_vector_router/models/: __init__.py  backend.py  config.py  enums.py  partition.py  results.py  scheduler.py  search.py  svr_config.py
semantic_vector_router/query/: __init__.py  filters.py  mongo_filters.py
semantic_vector_router/rerankers/: __init__.py  base.py  cohere.py  voyage.py
semantic_vector_router/routing/: __init__.py  centroid.py  merger.py  resolver.py
semantic_vector_router/scheduler/: __init__.py  engine.py  interval.py  models.py  window.py
semantic_vector_router/utils/: __init__.py  cache.py  field_analyzer.py  logging.py  metrics.py  rate_limiter.py  retry.py  text_serializer.py  vector_math.py
tests/: __init__.py  conftest.py
tests/functional/: test_end_to_end.py
tests/integration/: __init__.py  conftest.py  test_centroid_routing_flow.py  test_cli_flow.py  test_fields_mode_flow.py  test_ingest_search_roundtrip.py  test_lifecycle_flow.py  test_mongodb_backend.py  test_postgres_backend.py  test_postgres_poc.py  test_query_layer.py  test_scheduler_flow.py  test_source_mode_flow.py  test_views_mode_flow.py
tests/performance/: __init__.py  conftest.py  test_ingest_performance.py  test_search_performance.py
tests/unit/: test_backend_factory.py  test_backend_factory_postgres.py  test_backend_models.py  test_base_backend.py  test_cache.py  test_centroid_computation.py  test_centroid_router.py  test_centroid_wiring.py  test_cli.py  test_cli_ingest.py  test_cli_monitor.py  test_cli_repartition.py  test_client.py  test_config.py  test_detector.py  test_edge_cases.py  test_embedders.py  (+44 more)
(+11 files in other folders)
