[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-vector-router"
version = "0.1.0"
description = "Vector search orchestration layer for MongoDB Atlas — partitioning, index lifecycle, query routing, and result unification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Paul C", email = "your@email.com" }
]
keywords = [
    "vector-search",
    "mongodb",
    "atlas",
    "orchestration",
    "index-management",
    "embeddings",
    "semantic-search",
    "partitioning",
    "rag",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pymongo>=4.5.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
voyage = [
    "voyageai>=0.2.0",
]
cohere = [
    "cohere>=5.0.0",
]
huggingface = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
all-embedders = [
    "semantic-vector-router[openai,voyage,cohere,huggingface]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
]

[project.scripts]
svr = "semantic_vector_router.cli:main"

[project.urls]
Homepage = "https://github.com/pcleene/semantic-vector-router"
Documentation = "https://github.com/pcleene/semantic-vector-router#readme"
Repository = "https://github.com/pcleene/semantic-vector-router"
Issues = "https://github.com/pcleene/semantic-vector-router/issues"
Changelog = "https://github.com/pcleene/semantic-vector-router/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["semantic_vector_router"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end integration tests requiring MongoDB Atlas",
    "performance: performance benchmarks requiring MongoDB Atlas",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning",
    "ignore:The test .* is marked with '@pytest.mark.asyncio' but it is not an async function:pytest.PytestWarning",
]
